# data-forge

./: .env.example  .gitignore  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
config/schemas/source/: weather_data.yaml
infrastructure/airflow/dags/: orchestrator.py
infrastructure/dbt/data_forge/: .user.yml  dbt_project.yml  profiles.yml
infrastructure/dbt/data_forge/models/: sources.yml
infrastructure/dbt/data_forge/models/mart/: weather_daily_summary.sql  weather_report.sql
infrastructure/dbt/data_forge/models/raw/: raw_weather_data.sql
infrastructure/dbt/data_forge/models/staging/: stg_weather_data.sql
infrastructure/docker/airflow/: Dockerfile
infrastructure/docker/dbt/: Dockerfile
infrastructure/postgres/: airflow-init.example.sql
src/data_forge/connections/: postgres.py
src/data_forge/connections/apis/: weather.py
src/data_forge/models/: schemas.py
src/data_forge/tasks/: __init__.py  load_weather_data.py
